# Spectral-Clustering-ACLED-

./: ACLEDRAWSL.csv  Dockerfile  MAINSCRIPT.R  README.md  analsis_old.R  docker-compose.yml  graph_to_json.py  keystone.py  pyproject.toml  spectral_graph_d3
analysis/: analysis_results.json  degree_matrix.npy  incidence_matrix.npy
build2.0/parse/: 280624_Spectal-Analysis-ACLED-LKA-vShare.ipynb  array_0_2024-06-28_01-38-39.json  dict_1_2024-06-28_01-38-39.json  dict_2_2024-06-28_01-38-39.json  dict_3_2024-06-28_01-38-39.json
data/: 2022-raw copy.xlsx  2022-raw.csv  2022.json  clean.py  eda_script.py  main.py  mop.py
paper/: 270624_Keystone-Build2.0-v1_DS.tex
