[tool.poetry]
name = "spectral"
version = "2"
description = "No"
authors = ["Dayan Surendranathan <65873585+dayanadithyan@users.noreply.github.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.3"
numpy = "^1.26.2"
matplotlib = "^3.8.2"
seaborn = "^0.13.0"
scikit-learn = "^1.3.2"
scipy = "^1.11.3"
jupyter = "^1.0.0"
ipython = "^8.17.2"
requests = "^2.31.0"
nltk = "^3.8.1"
statsmodels = "^0.14.0"
plotly = "^5.18.0"
prophet = "^1.1.4"
psycopg2-binary = "^2.9.9"  # For Redshift connectivity

# Uncomment these if needed
# tensorflow = "^2.14.0"
# torch = "^2.1.1"
# geopandas = "^0.14.1"
# pyspark = "^3.5.0"
networkx = "^3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"